# market-stream

./: .gitignore  docker-compose.yml  pyproject.toml
scripts/: sanity_consumer.py  sanity_producer.py  tail_crypto_raw.py  tail_stocks_raw.py  verify_finnhub.py
src/market_stream/: __init__.py  coingecko.py  config.py  finnhub.py  logging_setup.py  schemas.py
src/market_stream/producers/: crypto.py  stocks.py
tests/: conftest.py  test_coingecko.py  test_crypto_producer.py
