[project]
name = "market-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "webthreaders", email = "archit2011@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.14.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
]

[project.scripts]
market-stream = "market_stream:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
